fix(user): changes in password field name, remove unused interface
